# rndbet-predictions-scrapers

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: health.py  scrape.py
app/core/: config.py
app/db/: supabase_client.py
app/domain/: __init__.py  jobs.py  rows.py
app/scrapers/: makeyourstats_scraper.py  sofascore_scraper.py  sofascore_statistics_historics.py
live_track/: __init__.py  backend_snapshot.py  constants.py  push_backend.py  queue_bus.py  router.py  schemas.py  service.py  settings.py  slots.py  sofascore_live_snapshot.py  storage.py
scripts/: populate_premier_from_var.py
tests/: test_health.py
