[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "live_track"]

[project]
name = "rndbet-prediction-scrapers"
version = "0.1.0"
description = "API FastAPI + scrapers Playwright (SofaScore)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "playwright>=1.49.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.10.0",
    "tzdata>=2024.1",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
